decide the final name

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,8 +32,7 @@
 <!-- Footer -->
 <div class="row">
   <footer class="text-center" style="background-color:#424245;position:absolute;bottom:0;width:100%;">
-    <p>Created by: Alfredo De Goyeneche, Yoav Navon, Alexander Israel</p>
-    <p>IIC2143 - Ingeniería de Software - 2018-1 - Pontificia Universidad Católica de Chile (PUC)</p>
+    <p>Created by:issacc, way2333</p>
   </footer>
 </div>
 
