--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,9 +7,9 @@
         <span class="icon-bar"></span>
       </button>
       <% if user_signed_in? %>
-      <a class="navbar-brand" href="/home">//slashslash</a>
+      <a class="navbar-brand" href="/home">//rubybbs</a>
       <% else %>
-      <a class="navbar-brand" href="/">//slashslash</a>
+      <a class="navbar-brand" href="/">//rubybbs</a>
       <% end %>
     </div>
     <% unless current_page?(root_path) %>
